Adjustments and improvements in the writing of the source code