@@ -115,7 +115,7 @@ public class OperationsEntity<T> {
 				Field[] fields = removeSerialVersionUIDAttribute(entity.getDeclaredFields());
 				fields = removeAttributeNotColumn(fields);
 				while (result.next()) {					
-					T entityResult = entity.newInstance();
+					T entityResult = entity.getDeclaredConstructor().newInstance();
 					for (Field field : fields) {						
 						Method methodSetAttribute = entityResult.getClass().getDeclaredMethod(getMethodSetterName(field), field.getType());
 						methodSetAttribute.invoke(entityResult, defineResultSetAttribute(result, field));						
@@ -125,7 +125,11 @@ public class OperationsEntity<T> {
 			}
 		}
 	}
-	
+
+	/**
+	 * ATTENTION: this method must not close appeal!
+	 * Do not use the close method or try-with-resources
+	 */
 	protected ResultSet processOperateWithResultSet(String query) throws SQLException  {		
 	    PreparedStatement statement = connection.prepareStatement(query);
 		ResultSet result = statement.executeQuery() ;
